<resources>
    <string name="app_name">bunti</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="nombre">Nombre</string>
    <string name="registrarme">Registrarme</string>
    <string name="email">Email</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="btnacep">Aceptas nuestra política de privacidad y nuestros términos de uso</string>
    <string name="welcome">Te damos la bienvenida a Bunt`i App!</string>
    <string name="sesion">Regístrate o Inicia sesión con tu email</string>
    <string name="btnbuscar">Buscar Taxi</string>
    <string name="btnllamar">Llamar a la base</string>
    <string name="user">Usuario encontrado</string>
    <string name="destino">Llevar a su destino</string>
    <string name="activar">¿Quieres activar tu localización?</string>
    <string name="ubicacion">Necesitamos saber tu localización para poder ubicarte</string>
    <string name="no">Ahora no</string>
    <string name="btnSi">Sí</string>
    <string name="pagar">¿Cómo quieres pagar?</string>
    <string name="elige">Elige tu forma de pago favorita</string>
    <string name="btnefectivo">Efectivo</string>
    <string name="btntarjeta">Tarjeta bancaria</string>
    <string name="btnpaypal">Paypal</string>
    <string name="pago">Pago Satisfactorio</string>
    <string name="taxi">¡Taxista en camino!</string>
    <string name="paciente">Le pedimos ser paciente, por su atención, gracias</string>
    <string name="tiempo">Tiempo de llegada: 5 min</string>
    <string name="solicitud_enviada">Solicitud enviada</string>
    <string name="en_unos_momentos_se_te_notificar_cuando_tu_solicitud_haya_sido_aceptada">En unos momentos se te notificará cuando tu solicitud haya sido aceptada.</string>
    <string name="detalles">Detalles</string>
    <string name="cliente_nombre_apellidos">Cliente: Nombre Apellidos</string>
    <string name="fecha_y_hora_25_07_2019_7_20_17">Fecha y hora: 25/07/2019 - 7:20:17</string>
    <string name="direcci_n_calle_estado_pais">Dirección: Calle, Estado, Pais.</string>
    <string name="aceptar">Aceptar</string>
    <string name="todo">TODO</string>
    <string name="telefono">telefono</string>
</resources>
