<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SatisfactoryPaymentActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewSatisfactory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amiko_bold"
            android:text="@string/pago"
            android:textColor="@color/colorText"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/imageViewSatisfactory"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/iconsatisfactorypayment" />

        <TextView
            android:id="@+id/textViewTaxi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/amiko_bold"
            android:text="@string/taxi"
            android:textColor="@color/colorText"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textViewPacient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/amiko_bold"
            android:text="@string/paciente"
            android:textAlignment="center"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textViewTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/amiko_bold"
            android:text="@string/tiempo"
            android:textSize="24sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>