<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.LocalizationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageViewLocalization"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/localizacionlogo"/>

        <TextView
            android:id="@+id/textViewActivate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="9dp"
            android:fontFamily="@font/amiko_bold"
            android:text="@string/activar"
            android:textAlignment="center"
            android:textColor="@color/colorText"
            android:textSize="24sp"/>

        <TextView
            android:id="@+id/textViewLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/ubicacion"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textViewNotNow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/no"
            android:textColor="#2E86C1"
            android:textSize="22sp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <Button
            android:id="@+id/buttonYes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@color/colorButton"
            android:fontFamily="@font/amiko_bold"
            android:text="@string/btnSi"
            android:textAllCaps="false"
            android:textSize="22sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>