<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MethodPaymentActivity">

    <TextView
        android:id="@+id/textViewPacient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="49dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/amiko_bold"
        android:text="@string/pagar"
        android:textColor="@color/colorText"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="79dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="79dp"
        android:layout_marginBottom="8dp"
        android:text="@string/elige"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPacient"
        app:layout_constraintVertical_bias="0.003" />



    <ImageView
        android:id="@+id/imageViewPayment"
        android:layout_width="232dp"
        android:layout_height="188dp"
        android:layout_marginStart="73dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/iconpayment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="186dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewPayment"
        app:layout_constraintVertical_bias="0.059">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewCash"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/iconefectivo" />

            <Button
                android:id="@+id/buttonCash"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:background="@color/colorButton"
                android:fontFamily="@font/amiko_bold"
                android:text="@string/btnefectivo"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewCreditCard"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="0dp"
                android:src="@drawable/icontargeta" />

            <Button
                android:id="@+id/buttonCreditCard"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:background="@color/colorButton"
                android:fontFamily="@font/amiko_bold"
                android:text="@string/btntarjeta"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageViewPaypal"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/iconpaypal" />

            <Button
                android:id="@+id/buttonPayPal"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="15dp"
                android:background="@color/colorButton"
                android:fontFamily="@font/amiko_bold"
                android:text="@string/btnpaypal"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>